CREATE TABLE "dim_users" (
  "id_user" INT GENERATED BY DEFAULT AS IDENTITY PRIMARY KEY,
  "first_name" varchar(50) NOT NULL,
  "last_name" varchar(50) NOT NULL,
  "email" varchar(100) UNIQUE NOT NULL,
  "phone_number" varchar(20),
  "date_of_birth" date NOT NULL,
  "kyc_status" varchar(20) NOT NULL DEFAULT 'Pending',
  "account_balance" decimal(12,2) NOT NULL DEFAULT 0,
  "created_at" timestamp NOT NULL
);

CREATE TABLE "dim_payment_methods" (
  "id_payment_method" INT GENERATED BY DEFAULT AS IDENTITY PRIMARY KEY,
  "name" varchar(50) NOT NULL,
  "provider_name" varchar(50) NOT NULL,
  "is_active" boolean NOT NULL DEFAULT true
);

CREATE TABLE "dim_sports" (
  "id_sport" INT GENERATED BY DEFAULT AS IDENTITY PRIMARY KEY,
  "name" varchar(50) NOT NULL
);

CREATE TABLE "dim_leagues" (
  "id_league" INT GENERATED BY DEFAULT AS IDENTITY PRIMARY KEY,
  "id_sport" int NOT NULL,
  "name" varchar(100) NOT NULL,
  "country" varchar(50)
);

CREATE TABLE "dim_teams" (
  "id_team" INT GENERATED BY DEFAULT AS IDENTITY PRIMARY KEY,
  "name" varchar(100) NOT NULL
);

CREATE TABLE "rel_team_leagues" (
  "id_team" int NOT NULL,
  "id_league" int NOT NULL,
  PRIMARY KEY ("id_team", "id_league")
);

CREATE TABLE "dim_sports_events" (
  "id_event" INT GENERATED BY DEFAULT AS IDENTITY PRIMARY KEY,
  "id_league" int NOT NULL,
  "id_home_team" int NOT NULL,
  "id_away_team" int NOT NULL,
  "event_date" timestamp NOT NULL,
  "status" varchar(20) NOT NULL DEFAULT 'Scheduled',
  "final_result" varchar(50)
);

CREATE TABLE "dim_bet_markets" (
  "id_market" INT GENERATED BY DEFAULT AS IDENTITY PRIMARY KEY,
  "id_event" int NOT NULL,
  "market_name" varchar(100) NOT NULL,
  "status" varchar(20) NOT NULL DEFAULT 'Open'
);

CREATE TABLE "fact_odds_history" (
  "id_odd" INT GENERATED BY DEFAULT AS IDENTITY PRIMARY KEY,
  "id_market" int NOT NULL,
  "selection_option" varchar(100) NOT NULL,
  "odd_value" decimal(6,2) NOT NULL,
  "changed_at" timestamp NOT NULL
);

CREATE TABLE "fact_financial_transactions" (
  "id_transaction" INT GENERATED BY DEFAULT AS IDENTITY PRIMARY KEY,
  "transaction_reference" varchar(36) UNIQUE NOT NULL,
  "id_user" int NOT NULL,
  "id_payment_method" int,
  "transaction_type" varchar(20) NOT NULL,
  "amount" decimal(12,2) NOT NULL,
  "transaction_datetime" timestamp NOT NULL,
  "status" varchar(20) NOT NULL DEFAULT 'Completed'
);

CREATE TABLE "fact_bet_tickets" (
  "id_ticket" INT GENERATED BY DEFAULT AS IDENTITY PRIMARY KEY,
  "id_user" int NOT NULL,
  "total_stake" decimal(10,2) NOT NULL,
  "potential_payout" decimal(12,2) NOT NULL,
  "ticket_status" varchar(20) NOT NULL DEFAULT 'Pending',
  "placed_at" timestamp NOT NULL
);

CREATE TABLE "fact_bet_selections" (
  "id_selection" INT GENERATED BY DEFAULT AS IDENTITY PRIMARY KEY,
  "id_ticket" int NOT NULL,
  "id_odd" int NOT NULL,
  "selected_option" varchar(100) NOT NULL,
  "odd_value_at_bet" decimal(6,2) NOT NULL,
  "status" varchar(20) NOT NULL DEFAULT 'Pending'
);

COMMENT ON COLUMN "dim_users"."kyc_status" IS 'Pending, Verified, Rejected';

COMMENT ON COLUMN "dim_payment_methods"."name" IS 'Credit Card, Bank Transfer, PSE, Nequi, E-Wallet';

COMMENT ON COLUMN "dim_payment_methods"."provider_name" IS 'PayU, Stripe, MercadoPago, etc.';

COMMENT ON COLUMN "dim_sports"."name" IS 'Futbol, Baloncesto, Tenis, etc.';

COMMENT ON COLUMN "dim_sports_events"."status" IS 'Scheduled, Live, Finished, Cancelled';

COMMENT ON COLUMN "dim_sports_events"."final_result" IS 'Ej. 2-1, 98-102';

COMMENT ON COLUMN "dim_bet_markets"."market_name" IS 'Ganador Partido, Total Goles Over/Under 2.5';

COMMENT ON COLUMN "dim_bet_markets"."status" IS 'Open, Suspended, Settled';

COMMENT ON COLUMN "fact_odds_history"."selection_option" IS 'Ej. Gana Local, Empate, Gana Visitante';

COMMENT ON COLUMN "fact_odds_history"."odd_value" IS 'Cuota ofrecida';

COMMENT ON COLUMN "fact_financial_transactions"."transaction_reference" IS 'UUID / Hash único de la transacción';

COMMENT ON COLUMN "fact_financial_transactions"."transaction_type" IS 'Deposit, Withdrawal, Adjustment, Payout';

COMMENT ON COLUMN "fact_financial_transactions"."status" IS 'Pending, Completed, Failed';

COMMENT ON COLUMN "fact_bet_tickets"."total_stake" IS 'Monto total apostado';

COMMENT ON COLUMN "fact_bet_tickets"."ticket_status" IS 'Pending, Won, Lost, Cancelled';

COMMENT ON COLUMN "fact_bet_selections"."odd_value_at_bet" IS 'Congela el valor exacto de la cuota comprada';

COMMENT ON COLUMN "fact_bet_selections"."status" IS 'Pending, Won, Lost, Void';

ALTER TABLE "dim_leagues" ADD FOREIGN KEY ("id_sport") REFERENCES "dim_sports" ("id_sport") DEFERRABLE INITIALLY IMMEDIATE;

ALTER TABLE "rel_team_leagues" ADD FOREIGN KEY ("id_team") REFERENCES "dim_teams" ("id_team") DEFERRABLE INITIALLY IMMEDIATE;

ALTER TABLE "rel_team_leagues" ADD FOREIGN KEY ("id_league") REFERENCES "dim_leagues" ("id_league") DEFERRABLE INITIALLY IMMEDIATE;

ALTER TABLE "dim_sports_events" ADD FOREIGN KEY ("id_league") REFERENCES "dim_leagues" ("id_league") DEFERRABLE INITIALLY IMMEDIATE;

ALTER TABLE "dim_sports_events" ADD FOREIGN KEY ("id_home_team") REFERENCES "dim_teams" ("id_team") DEFERRABLE INITIALLY IMMEDIATE;

ALTER TABLE "dim_sports_events" ADD FOREIGN KEY ("id_away_team") REFERENCES "dim_teams" ("id_team") DEFERRABLE INITIALLY IMMEDIATE;

ALTER TABLE "dim_bet_markets" ADD FOREIGN KEY ("id_event") REFERENCES "dim_sports_events" ("id_event") DEFERRABLE INITIALLY IMMEDIATE;

ALTER TABLE "fact_odds_history" ADD FOREIGN KEY ("id_market") REFERENCES "dim_bet_markets" ("id_market") DEFERRABLE INITIALLY IMMEDIATE;

ALTER TABLE "fact_financial_transactions" ADD FOREIGN KEY ("id_user") REFERENCES "dim_users" ("id_user") DEFERRABLE INITIALLY IMMEDIATE;

ALTER TABLE "fact_financial_transactions" ADD FOREIGN KEY ("id_payment_method") REFERENCES "dim_payment_methods" ("id_payment_method") DEFERRABLE INITIALLY IMMEDIATE;

ALTER TABLE "fact_bet_tickets" ADD FOREIGN KEY ("id_user") REFERENCES "dim_users" ("id_user") DEFERRABLE INITIALLY IMMEDIATE;

ALTER TABLE "fact_bet_selections" ADD FOREIGN KEY ("id_ticket") REFERENCES "fact_bet_tickets" ("id_ticket") DEFERRABLE INITIALLY IMMEDIATE;

ALTER TABLE "fact_bet_selections" ADD FOREIGN KEY ("id_odd") REFERENCES "fact_odds_history" ("id_odd") DEFERRABLE INITIALLY IMMEDIATE;
